<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/post"
            android:title="@string/post_a_request" />
        <item
            android:id="@+id/nav_subscribe"
            android:icon="@drawable/baseline_diamond_24"
            android:title="@string/subscribe" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_privacypolicy"
            android:icon="@drawable/privacypolicy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_terms_conditions"
            android:icon="@drawable/terms"
            android:title="@string/terms_and_conditions" />
        <item
            android:id="@+id/nav_verify_land_documents"
            android:icon="@drawable/settings"
            android:title="@string/verify_land_document" />

    </group>
</menu>