<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEFF2"
    android:padding="12dp"
    tools:context=".ui.post_a_request.post_a_request_Fragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="15sp"
                android:text="@string/assesera_prioritizes_our_needs" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#259213"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:id="@+id/cost_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="6dp"
                    android:text="10.00 per post"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/edittext_corner_bg"
        android:hint="@string/how_many_rooms"
        android:textColorHint="@color/text_clr"
        android:padding="10dp"
        android:layout_marginTop="12dp"
        android:elevation="2dp"/>

    <EditText
        android:id="@+id/select_property"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/edittext_corner_bg"
        android:hint="@string/select_property"
        android:textColorHint="@color/text_clr"
        android:padding="10dp"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:drawableEnd="@drawable/arrow_down"
        android:drawablePadding="16dp"
        android:layout_marginTop="12dp"
        android:elevation="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/edittext_corner_bg"
        android:hint="@string/type"
        android:textColorHint="@color/text_clr"
        android:padding="10dp"
        android:drawableEnd="@drawable/arrow_down"
        android:drawablePadding="16dp"
        android:layout_marginTop="12dp"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:elevation="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/edittext_corner_bg"
        android:hint="@string/enter_your_location"
        android:textColorHint="@color/text_clr"
        android:padding="10dp"
        android:layout_marginTop="12dp"
        android:elevation="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:background="@drawable/edittext_corner_bg"
            android:hint="@string/usd"
            android:textColorHint="@color/text_clr"
            android:text="USD"
            android:padding="10dp"
            android:drawableEnd="@drawable/arrow_down"
            android:drawablePadding="16dp"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_marginTop="12dp"
            android:elevation="2dp"/>

        <EditText
            android:layout_marginStart="6dp"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/edittext_corner_bg"
            android:hint="@string/enter_your_budget"
            android:textColorHint="@color/text_clr"
            android:padding="10dp"
            android:layout_marginTop="12dp"
            android:elevation="2dp"/>

    </LinearLayout>


    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@drawable/edittext_corner_bg"
        android:hint="@string/enter_your_number"
        android:padding="10dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/enter_your_number"
        android:textColorHint="@color/text_clr"
        android:inputType="phone"
        android:elevation="2dp"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PREVIEW"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:textSize="13sp"
        android:textColor="@color/text_clr" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B1CBFF"
                android:orientation="horizontal"
                android:padding="6dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_alignParentStart="true"
                    android:id="@+id/profile_pic"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="12dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/neon" />

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingStart="12dp"
                    android:text="@string/enter_your_name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_toEndOf="@id/profile_pic"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_tv"
                    android:layout_toEndOf="@id/name_tv"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/minutes_ago"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/options"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_centerVertical="true"
                    android:padding="12dp"
                    android:src="@drawable/options" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="15sp"
                android:text="@string/customer_ask_for" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/continue_to_payment"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/border_corner_bg"
        android:backgroundTint="@color/blue"
        style="?android:attr/buttonBarButtonStyle" />
</LinearLayout>



</ScrollView>