<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B1CBFF"
                android:orientation="horizontal"
                android:padding="6dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_alignParentStart="true"
                    android:id="@+id/profile_pic"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="12dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/neon" />

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingStart="12dp"
                    android:text="@string/enter_your_name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_toEndOf="@id/profile_pic"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_tv"
                    android:layout_toEndOf="@id/name_tv"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/minutes_ago"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/options"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_centerVertical="true"
                    android:padding="12dp"
                    android:src="@drawable/options" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="15sp"
                android:text="@string/customer_ask_for" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>